--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^11.0.5",
     "stripe": "^18.1.0"
   },
