--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
