--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-menubar": "^1.1.12",
     "axios": "^1.9.0",
+    "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
