--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^11.0.5",
-    "stripe": "^18.1.0"
+    "stripe": "^18.1.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
