--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "flowbite": "^3.1.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
@@ -19,8 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^11.0.5",
     "sharp": "^0.34.3",
-    "stripe": "^18.1.0",
-    "zustand": "^5.0.5"
+    "stripe": "^18.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
