--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^19.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^11.0.5",
-    "sharp": "^0.34.3",
-    "stripe": "^18.1.0"
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
